docs(smoke): cross-platform validation checklist + Win-aware error hints (Task #113)
Closes the Phase 3 loop on the libtray side. The smoke harness was
already platform-agnostic — it talks only to the public Tray API — but
its KDoc + failure message assumed a Linux audience. Updated:

  * Adds a numbered 1–7 validation checklist to the SmokeMain KDoc so
    a fresh tester (or community Windows / macOS contributor) knows
    exactly what to click and what stdout to expect.
  * Replaces the Linux-only Tray.create-returned-null error message
    with an os.name-switched hint: Linux gets the existing libdbus /
    SNI watcher checklist, Windows points at the Panama
    --enable-native-access flag (most likely cause if the Win backend
    fails to load), macOS points at Phase 4 not landing yet.
  * README status table flips Windows from "pending" to "code complete,
    awaiting community validation across SKUs" — the work in 2d4fc1c +
    04434c6 + 7621b4c is end-to-end on Linux compile-validation, just
    needs a Windows host to run the smoke harness against.

End-to-end Windows hands-on validation is now a community task — we
ship the smoke + a checklist; the next contributor with a Win10/11 box
runs `gradlew.bat runSmoke` and reports back via the libtray repo issue
tracker. Not blocking Aura's libtray-integration → stable PR; that PR
ships when at least one Windows tester confirms the icon shows up.